--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,10 @@
 	border-bottom: 2px solid #000;
 }
 
+body {
+	height: 990px;
+}
+
 .swiper {
 	width: 500px;
 	height: 350px;
@@ -55,7 +59,7 @@
 	position: absolute;
 	right: 0px;
 	bottom: 8px;
-	font-size: 20px;
+	font-size: 22px;
 	height: 55px;
 }
 
@@ -69,7 +73,7 @@ audio {
 /* 城市 */
 .st {
 	position: relative;
-	top: 20px;
+	top: 12px;
 }
 
 .st h3 {
@@ -81,6 +85,7 @@ audio {
 	height: 198px;
 	font-size: 17.5px;
 	border-bottom: 2px solid #000;
+	line-height: 26px;
 }
 
 .st-text {
@@ -93,9 +98,13 @@ audio {
 	position: absolute;
 	right: 10px;
 	height: 250px;
-	top: -18px;
+	top: 0px;
 	object-fit: fill;
 	border-radius: 15px;
+}
+
+.city {
+	margin-top: 15px;
 }
 
 .cz,
@@ -108,6 +117,7 @@ audio {
 .cz p,
 .jy p {
 	font-size: 17.5px;
+	line-height: 24px;
 }
 
 .cz h3,
