--- a/css/cuan.css
+++ b/css/cuan.css
@@ -1,5 +1,5 @@
 body {
-    height: 1200px;
+    height: 1118px;
 }
 
 .box {
@@ -9,8 +9,8 @@ body {
 
 .box .hd p {
     position: absolute;
-    right: 50px;
-    top: 0px;
+    right: 80px;
+    top: 20px;
     width: 500px;
     font-size: 19px;
     line-height: 50px;
@@ -18,8 +18,8 @@ body {
 
 .box .bd p {
     position: absolute;
-    left: 50px;
-    top: 570px;
+    left: 70px;
+    top: 555px;
     width: 500px;
     font-size: 20px;
     line-height: 50px;
@@ -27,24 +27,24 @@ body {
 
 .box .bd .pic1 {
     position: absolute;
-    top: 534px;
-    right: 0;
+    top: 500px;
+    right: 30px;
 }
 
 .box .bd .pic2 {
     position: absolute;
-    top: 801px;
-    right: 0;
+    top: 743px;
+    right: 30px;
 }
 
 .pic1,
 .pic2 {
-    width: 600px;
-    height: 267px;
-    border-radius: 20px;
-    background-color: pink;
+    width: 488px;
+    height: 244px;
+    border-radius: 18px;
     background: url(../images/红头船1.jpg) no-repeat;
     background-size: 100% 100%;
+    margin-left: 30px;
 }
 
 .pic2 {
